objects/Issue_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>TEXT(Datevalue(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Summary__c</fullName>
        <label>Issue Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Market_Policy_Issue__c</fullName>
        <label>Market &amp; Policy Issue</label>
        <referenceTo>Market_Policy_Issue__c</referenceTo>
        <relationshipLabel>Issue Summaries</relationshipLabel>
        <relationshipName>Issue_Summaries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region_Market__c</fullName>
        <label>Region/Market</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>012i0000000tujM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Issue Summaries</relationshipLabel>
        <relationshipName>Issue_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issue Summary</label>
    <nameField>
        <label>Issue Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issue Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>